--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,5 +20,5 @@ test_script:
   - ps: cp config/database.yml.appveyor config/database.yml
   - ps: bundle exec rake --version
   - ps: bundle exec rake db:create
-  - ps: bundle exec rkae db:migrate
+  - ps: bundle exec rake db:migrate
   - ps: bundle exec rake $RAKE_TASK
